   - Fix defect 188 - Grobj files write out spectrum ids rather than 
     names.. The fix will read old files, but new files will use
     names.
   - Fix issue with reading old tcl-list files: the treeparameter command
     was invoked with the wrong number of parameters.
   - Fix error in saving .sdef files in old treeparameter gui.
   - Fix buffer overflow error in grprint.cc found by Dave Caussyn.
   - Remove illegal default argument in PointlistGate.h

SpecTcl-3.0-007
   - Credit D. Bazin as original author of TreeParam in the sources.
   - Fix configuration not always finding motif headers on current systems.
   - Fix 64-bit uncleanliness in Xamine

SpecTcl-3.0-008
   - Added wysiwyg printing based on image capture from the frames.
   - Fix defects 195, 196: Gri was emitting epsf which printers would
     smoosh all on one page. Print setup dialog's print command had
     a duplicate widget name that made it operate strangely.
   - Added jumboscripted ..scriptable readout for buffers > 64Kwords.
   - Check for gd in configure and create appropriate compiler/ld
     options.
SpecTcl-3.0-009
   - Defect 197 : scaling.h the averaging boxes for 2d average reduction
                  were too wide by a channel
   - Defect 200 : long/int mixup that is 64 bit unclean in gamma1DL.cpp
                  This makes 64bit gamma1dL spectra have only everyother
                  channel set and can overwrite past the end of the spectrum
                  as well fi the parameter range covers more than the
                  spectrum range!!
   - Defect 209 : more issues like Defect 200.
   - Defect 210 : SpecTcl/AppInit.cpp had sscanf of int -> long. 64 bit bad.
   - Defect 211 : Creating g1 spectrum with empty parameter list crashes with
                  SEGFLT.
   - Fix erroneous alignment mask computation in allocator.c that could lead
       to Xamine free list corruption
   - Fix error in wysiwyg printing when zoomed.